hphp/hack/test/typecheck/as_expression/tuple4.php.exp
File "tuple4.php", line 6, characters 10-30:
The "as" operator cannot be used with a function (Typing[4195])
